Fix 3 col alignment for language examples

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -105,15 +105,24 @@ body {
 }
 
 .example-box:last-of-type {
-  border-right: transparent;
+  border-right: white;
 }
 
-.full-width {
-  width: 100%;
+.overflow-scroll {
+  overflow: scroll;
 }
 
-.margin-auto {
-  margin: auto;
+.pre-code {
+  white-space: pre-wrap;
+}
+
+.flex-equal-2 {
+  flex-basis: 50%;
+  flex-shrink: 0;
+}
+.flex-equal-4 {
+  flex-basis: 25%;
+  flex-shrink: 0;
 }
 
 .herogradient {
